<resources>
    <string name="app_name">ToDo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_task">Enter Task:</string>
    <string name="task">Task</string>
    <string name="enter_priority">Enter Priority</string>
    <string name="priority">Priority</string>
    <string name="save">SAVE</string>
</resources>
