<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment"
    android:background="@color/lightBlueBackground">
    <!-- android:background="@android:color/holo_blue_light" -->


    <!-- TODO: Update blank fragment layout -->
    <!-- <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Fragment Add" /> -->

    <LinearLayout
        android:id="@+id/linearLayoutAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="12dp">

        <TextView
            android:id="@+id/tvTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_task"
            android:textSize="17sp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/etTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:ems="100"
            android:hint="@string/task"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_priority"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/etPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text|number"
            android:hint="@string/priority"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@drawable/btn_rounded"
            android:textColor="@android:color/background_light"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            />
    </LinearLayout>



    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>-->


</FrameLayout>